# evolve-vst

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: EvolveEngine.cpp  EvolveEngine.h  EvolveTypes.h  GenCard.cpp  GenCard.h  PianoRoll.cpp  PianoRoll.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
